# MarkDVE

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README.ru.md
docs/: ai-workflow.md  index.md
docs/modules/: editor.md  viewer.md  workspace.md
scripts/: build_debug.sh  build_release.sh  run_app.sh  test_debug.sh
src/: CMakeLists.txt  codemapgenerator.cpp  codemapgenerator.h  documentcontroller.cpp  documentcontroller.h  documenttabwidget.cpp  documenttabwidget.h  editorsettings.cpp  editorsettings.h  editorsettingsdialog.cpp  editorsettingsdialog.h  editorwindow.cpp  editorwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  markdownhighlighter.cpp  markdownhighlighter.h  markdownview.cpp  markdownview.h  viewersettings.cpp  viewersettings.h  viewersettingsdialog.cpp  viewersettingsdialog.h  workspacemanager.cpp  workspacemanager.h
src/tests/: test_codemapgenerator.cpp  test_markdownview.cpp  test_workspacemanager.cpp
